--- a/pos-dashboard-nextjs/package.json
+++ b/pos-dashboard-nextjs/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.18",
+    "bootstrap-icons": "^1.11.0",
+    "next": "^14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "bootstrap-icons": "^1.11.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
